--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h2>Gde jesti</h2>
             <div class="form-group">
                 <input type="text" id="placeName" class="form-control" placeholder="Enter place to eat">
-                <button class="btn btn-secondary mt-2" onclick="addPlace()">Add Place</button>
+                <button class="btn btn-secondary mt-2" onclick="addPlace()">Dodaj Mesto</button>
             </div>
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
-            <button class="btn btn-success mt-2" onclick="spinWheel()">Spin Wheel</button>
+            <button class="btn btn-success mt-2" onclick="spinWheel()">Zavrti</button>
         </div>
     </div>
     <script src="script.js"></script>
