--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <input type="text" id="placeName" class="form-control" placeholder="Enter place to eat">
                 <button class="btn btn-secondary mt-2" onclick="addPlace()">Dodaj Mesto</button>
             </div>
-            <canvas id="wheelCanvas" width="500" height="500"></canvas>
+            <div class="wheel-container">
+                <canvas id="wheelCanvas" width="500" height="500"></canvas>
+                <div class="arrow">❰</div>
+            </div>
             <button class="btn btn-success mt-2" onclick="spinWheel()">Zavrti</button>
         </div>
     </div>
